tests/regression/errors/basic/import_error_12.csd
// Import error test 12
yeet "nonexistent_module_12"
sus result drip = some_function(12)
